# Il2CppResolver-CMake

./: CMakeLists.txt
src/: Defines.hpp  Dictionary.h  MonoArray.h
src/Functions/: Class.cpp  Domain.hpp  Thread.hpp
src/Unity/API/: GameObject.cpp  GameObject.hpp  Object.hpp
src/Unity/Structures/: Engine.hpp
src/Utils/: Helper.hpp
